fix deploy plugin

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 						<version>1.5</version>
 						<executions>
 							<execution>
+								<id>sign-artifacts</id>
 								<phase>verify</phase>
 								<goals>
 									<goal>sign</goal>
